# Gravitation-Simulation

./: CMakeLists.txt
include/: filehandler.h  main.h  shader.h
include/GLFW/: glfw3.h  glfw3native.h
include/glad/: glad.h
lib/GLFW/: glfw3.lib  glfw3dll.exp
lib/cglm/: cglm.exp  cglm.lib
shaders/: fragmentShader.frag  vertexShader.vert
src/: filehandler.c  glad.c  main.c  shader.c
